[gd_scene load_steps=6 format=2]

[ext_resource path="res://dataFiles/theme.tres" type="Theme" id=1]
[ext_resource path="res://dataFiles/font/OpenSans-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://dataFiles/menus/script/info.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0352941, 0, 0.113725, 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 2 )

[node name="info" type="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 169.0
margin_top = 99.0
margin_right = -169.0
margin_bottom = -99.0
theme = ExtResource( 1 )
window_title = "Info Window"
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer"]
margin_right = 686.0
margin_bottom = 402.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_right = 686.0
margin_bottom = 49.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_right = 496.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "Github Page: my little project here!"
align = 1
valign = 1

[node name="github" type="Button" parent="Panel/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 500.0
margin_right = 686.0
margin_bottom = 49.0
text = " go the link "

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 53.0
margin_right = 686.0
margin_bottom = 102.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_right = 496.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "Github Page: this is my github.io page"
align = 1
valign = 1

[node name="github_io" type="Button" parent="Panel/ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_left = 500.0
margin_right = 686.0
margin_bottom = 49.0
text = " go the link "

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 686.0
margin_bottom = 155.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/HBoxContainer3"]
margin_right = 496.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "Itch.io: this is my little demos and assets"
align = 1
valign = 1

[node name="itch_io" type="Button" parent="Panel/ScrollContainer/VBoxContainer/HBoxContainer3"]
margin_left = 500.0
margin_right = 686.0
margin_bottom = 49.0
text = " go the link "

[node name="HBoxContainer4" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 159.0
margin_right = 686.0
margin_bottom = 208.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/HBoxContainer4"]
margin_right = 496.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "youtube: my youtube channel"
align = 1
valign = 1

[node name="youtube" type="Button" parent="Panel/ScrollContainer/VBoxContainer/HBoxContainer4"]
margin_left = 500.0
margin_right = 686.0
margin_bottom = 49.0
text = " go the link "

[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/HBoxContainer/github" to="." method="_on_github_pressed"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/HBoxContainer2/github_io" to="." method="_on_github_io_pressed"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/HBoxContainer3/itch_io" to="." method="_on_itch_io_pressed"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/HBoxContainer4/youtube" to="." method="_on_youtube_pressed"]
